--- a/package.json
+++ b/package.json
@@ -14,6 +14,11 @@
   "dependencies": {
     "director": "1.2.8",
     "dotenv": "2.0.0",
+    "jquery": "^3.3.1",
+    "jsdom": "^11.6.2",
+    "request": "^2.85.0",
+    "requestify": "^0.2.5",
+    "sync-request": "^6.0.0",
     "winston": "2.2.0"
   },
   "devDependencies": {
