--- a/package.json
+++ b/package.json
@@ -1,23 +1,19 @@
 {
-  "name": "groupme-bot-starter",
+  "name": "groupme-frc-bot",
   "version": "1.0.0",
-  "description": "Starter code for the GroupMe bot workshop at ACM@UC",
-  "author": "Noah Bass <noah@noahbass.com>",
+  "description": "GroupMe bot for finding FRC team names and locations.",
+  "author": "Joseph McCarey <joseph@mccarey.net>",
   "main": "app.js",
   "scripts": {
     "start": "node app.js",
     "dev": "node app.js --dev"
   },
   "engines": {
-    "node": ">=4.0.0"
+    "node": ">=8.0.0"
   },
   "dependencies": {
     "director": "1.2.8",
     "dotenv": "2.0.0",
-    "jquery": "^3.3.1",
-    "jsdom": "^11.6.2",
-    "request": "^2.85.0",
-    "requestify": "^0.2.5",
     "sync-request": "^6.0.0",
     "winston": "2.2.0"
   },
@@ -25,11 +21,11 @@
     "localtunnel": "1.8.1",
     "promptly": "2.1.0"
   },
-  "homepage": "https://github.com/acmatuc/groupme-bot-starter",
-  "bugs": "https://github.com/acmatuc/groupme-bot-starter/issues",
+  "homepage": "https://github.com/jmccarey/groupme-frc-bot",
+  "bugs": "https://github.com/jmccarey/groupme-frc-bot/issues",
   "repository": {
     "type": "git",
-    "url": "https://github.com/acmatuc/groupme-bot-starter.git"
+    "url": "https://github.com/jmccarey/groupme-frc-bot.git"
   },
   "license": "MIT"
 }
